--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "engines": {
     "node": "14.x"
-             },
+  },
   "private": true,
   "dependencies": {
     "jquery": "^3.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-ga": "^2.3.5",
-    "react-scripts": "4.0.1"
+    "react-scripts": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
