--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-ga": "^2.3.5",
-    "react-scripts": "^5.0.0"
+    "react-scripts": "^5.0.0",
+    "nth-check": ">=2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
